# numerical_methods_7th_semestr

./: .gitignore  CMakeLists.txt  README.md  init_matrix.cpp  input.txt  matrix_wrapper.cpp  matrix_wrapper.h  tridiagonal_algorithm.h
src/: main.cpp  matrix.h  matrix_compute.cpp  matrix_compute.h  tridiagonal_algorithm.cpp  tridiagonal_algorithm.h
